# otus-cpp-basic-hw03

./: CMakeLists.txt  README.md  main.cpp
lib/dynamic/datetime/: CMakeLists.txt  datetime.cpp
lib/static/clear_cin/: CMakeLists.txt  clear_cin.cpp  clear_cin.h
src/argument_parse/: argument_parse.cpp  argument_parse.h
src/check_value/: check_value.cpp  check_value.h
src/get_random_value/: get_random_value.cpp  get_random_value.h
src/get_user_name/: get_user_name.cpp  get_user_name.h
src/result_table/: print_res_table.cpp  print_res_table.h  save_result.cpp  save_result.h
